fix fuscia bg text fit

--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,6 @@
   <link rel="shortcut icon" href="img/daftpunk64.ico">
 </head>
 <body>
-
     
 <nav>
     <a href="#">Home</a>
@@ -144,7 +143,7 @@
         </div>
         <div class="sidebar2">
             <h4>Thomas Bangalter</h4>
-            <p>Bangalter was born on 3 January 1975 in Paris. He began playing the piano at the age of six. 
+            <p>Bangalter was born on 3 January 1975 in Paris. He began playing the piano at the age of 6. 
                 He has stated that his parents were strict in keeping up his practice, for which he later thanked 
                 them. His father, Daniel Vangarde, was a songwriter and producer for performers such as the Gibson 
                 Brothers, Ottawan, and Sheila B. Devotion. As expressed by Bangalter, <em>"I never had any intention to 
